# intrinsic-superclasses

./: .ghci  .gitignore  README.md  intrinsic-superclasses.cabal  package.yaml  stack.yaml
src/Language/Haskell/TH/: Instances.hs
src/Language/Haskell/TH/Instances/: Defaults.hs  Internal.hs
src/Language/Haskell/TH/Instances/Defaults/: Internal.hs
src/Language/Haskell/TH/Instances/Internal/: Defaults.hs  Utils.hs
