name:                intrinsic-superclasses
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/daig/intrinsic-superclasses#readme
license:             BSD3
license-file:        LICENSE
author:              Dai
maintainer:          dailectic@gmail.com
copyright:           Sodality
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  default-extensions:  LambdaCase

source-repository head
  type:     git
  location: https://github.com/daig/intrinsic-superclasses
